@@ -2060,11 +2060,16 @@ geniCodeMultiply (operand * left, operand * right, RESULT_TYPE resultType)
   return IC_RESULT (ic);
 }
 
+static operand *
+geniCodeAdd (operand *left, operand *right, RESULT_TYPE resultType, int lvl);
+static operand *
+geniCodeLogic (operand *left, operand *right, int op, ast *tree);
+
 /*-----------------------------------------------------------------*/
 /* geniCodeDivision - gen intermediate code for division           */
 /*-----------------------------------------------------------------*/
 static operand *
-geniCodeDivision (operand * left, operand * right, RESULT_TYPE resultType)
+geniCodeDivision (operand *left, operand *right, RESULT_TYPE resultType)
 {
   iCode *ic;
   int p2 = 0;
@@ -2077,9 +2082,34 @@ geniCodeDivision (operand * left, operand * right, RESULT_TYPE resultType)
   resType = usualBinaryConversions (&left, &right, resultType, '/');
 
   /* if the right is a literal & power of 2
+     and left is signed then make it a conditional addition
+     followed by right shift */
+#if 0
+  if (IS_LITERAL (retype) &&
+      !IS_FLOAT (letype) &&
+      !IS_FIXED (letype) && !IS_UNSIGNED (letype) && ((p2 = powof2 ((TYPE_TARGET_ULONG) ulFromVal (OP_VALUE (right)))) > 0) &&
+      TARGET_Z80_LIKE)
+    {
+      operand *tmp, *cond;
+      symbol *label = newiTempLabel (NULL);
+
+      tmp = newiTempOperand (ltype, 0);
+      geniCodeAssign (tmp, left, 0, 0);
+
+      cond = geniCodeLogic (tmp, operandFromLit (0), '<', 0);
+      ic = newiCodeCondition (cond, 0, label);
+      ADDTOCHAIN (ic);
+
+      geniCodeAssign (tmp, geniCodeAdd (tmp, operandFromLit ((1 << p2) - 1), 0, 0), 0, 0);
+      geniCodeLabel (label);
+      ic = newiCode (RIGHT_OP, tmp, operandFromLit (p2));      /* right shift */
+    }
+  /* if the right is a literal & power of 2
      and left is unsigned then make it a
      right shift */
-  if (IS_LITERAL (retype) &&
+  else
+#endif
+       if (IS_LITERAL (retype) &&
       !IS_FLOAT (letype) &&
       !IS_FIXED (letype) && IS_UNSIGNED (letype) && ((p2 = powof2 ((TYPE_TARGET_ULONG) ulFromVal (OP_VALUE (right)))) > 0))
     {
